--- a/app/src/main/res/layout/fragment_register_step2.xml
+++ b/app/src/main/res/layout/fragment_register_step2.xml
@@ -6,10 +6,37 @@
     tools:context="br.com.ps.adctest.fragments.RegisterStep2Fragment"
     >
 
-    <TextView
+    <EditText
+        android:id="@+id/txt_login"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Passo 2"
+        android:layout_height="wrap_content"
+        android:hint="Login"
+        />
+
+    <EditText
+        android:id="@+id/txt_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:hint="Senha"
+        android:inputType="textPassword"
+        />
+
+    <EditText
+        android:id="@+id/txt_confirm_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:hint="Confirmar senha"
+        android:inputType="textPassword"
+        />
+
+    <Button
+        android:id="@+id/btn_register"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Cadastrar"
         />
 
 </LinearLayout>
